# sandbox

./: .gitignore  CMakeLists.txt  main.cpp
ext/: range.hpp  scope_exit.hpp
net/: CMakeLists.txt  exception.hpp  get_addrinfo.cpp  get_addrinfo.hpp  socket.hpp  socket_stream.hpp  socket_streambuf.hpp  socket_type.hpp  socket_utils.cpp  socket_utils.hpp
net/tcp/: create_socket.cpp  create_socket.hpp  socket.hpp  socket_stream.hpp  socket_streambuf.hpp  socket_type.hpp
